--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <!-- <link
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="./src/assets/favicon/apple-touch-icon.png"
@@ -21,9 +21,9 @@
       sizes="16x16"
       href="./src/assets/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./src/assets/favicon/site.webmanifest" />
+    <!-- <link rel="manifest" href="./src/assets/favicon/site.webmanifest" /> -->
     <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" /> -->
+    <meta name="theme-color" content="#ffffff" />
     <title>CAIT | SALON</title>
   </head>
   <body>
